# auto-backup-wsl

./: .gitignore  README.md  pyproject.toml  setup.py  说明.md
auto_backup/: __init__.py  __main__.py  config.py  core.py
