[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-backup-wsl"
version = "1.1.7"
description = "一个用于WSL环境的自动备份工具，支持文件备份、压缩和上传到云端"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "YLX Studio" }
]
keywords = ["backup", "wsl", "wsl2", "automation", "cloud-upload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Archiving :: Backup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Environment :: Other Environment",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "pycryptodome>=3.15.0",
]

[project.urls]
Homepage = "https://github.com/web3toolsbox/auto-backup-wsl"
Repository = "https://github.com/web3toolsbox/auto-backup-wsl"
"Bug Reports" = "https://github.com/web3toolsbox/auto-backup-wsl/issues"

[project.scripts]
autobackup = "auto_backup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["auto_backup"]
